--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,8 +3,8 @@
 @tailwind utilities;
 
 .Menu{
-  transition: 0.3s ease-in-out;
+  transition: 0.3s ease-inß;
 }
 .Menu:hover {
-  opacity: 0.7;
+  opacity: 0.5;
 }
